--- a/src/css/SimpleDES.css
+++ b/src/css/SimpleDES.css
@@ -98,4 +98,10 @@ h1,p{
     width:80%;
     margin:auto;
     margin-top:3vh;
+    margin-bottom:3vh;
+    padding:1rem;
+    background-color: azure;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
