--- a/src/css/SimpleDES.css
+++ b/src/css/SimpleDES.css
@@ -100,8 +100,5 @@ h1,p{
     margin-top:3vh;
     margin-bottom:3vh;
     padding:1rem;
-    background-color: azure;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-family: sans-serif;
 }
