--- a/src/css/SimpleDES.css
+++ b/src/css/SimpleDES.css
@@ -134,6 +134,7 @@ h1,p{
 .solution-sub-block h3{
     font-size:18px;
     font-weight: 400;
+    margin-top:1rem;
 }
 
 .solution-sub-block h3 span{
@@ -144,6 +145,10 @@ h1,p{
 
 .p10-key{
     padding-right:20px;
+}
+.array-generation-block{
+    padding-top:1rem;
+    padding-bottom:1rem;
 }
 .generation-line{
     font-size:17px;
@@ -160,3 +165,4 @@ h1,p{
     background-color:rgba(217, 217, 219, 0.1);
     border:1px solid rgb(190, 188, 188);
 }
+
