--- a/src/css/SimpleDES.css
+++ b/src/css/SimpleDES.css
@@ -31,12 +31,19 @@ h1,p{
     width:100%;
     height:auto;
 }
-
+.instruction-text{
+    background-color:rgba(252, 239, 239,0.5);
+    padding:1.5rem 0rem;
+    text-align: center;
+    font-size:15px;
+    font-family:Arial, Helvetica, sans-serif;
+    color: rgb(250, 7, 7);
+}
 .input-block{
     width:max-content;
     height:max-content;
     margin: auto;
-    margin-top:5vh;
+    margin-top:0vh;
     display: grid;
     grid-template-columns:1.5fr 4.5fr;
     grid-column: auto;
@@ -79,18 +86,28 @@ h1,p{
 }
 
 .submit-btn-block{
+    margin-top:5vh;
     display: flex;
     align-items: center;
     justify-content: center;
     padding:1rem;
     margin-bottom:2rem;
+    background-color: aliceblue;
 }
 .submit-btn{
-    padding:0.5rem 1rem 0.5rem 1rem;
-    background-color: rgb(12, 5, 63);
+    font-size:23px;
+    letter-spacing: 2px;
+    padding:0.5rem 2rem 0.5rem 2rem;
+    background-color: rgb(37,59,128);
+    border-radius:5px;
     cursor: pointer;
     color: white;
     border:none;
+    font-family:sans-serif;
+}
+
+.submit-btn:hover{
+    border-radius: 0px;
 }
 
 .solution-block{
