--- a/src/css/simple-des-min.css
+++ b/src/css/simple-des-min.css
@@ -1,8 +1,10 @@
+@media screen  and (max-width: 750px) {
+  
 body{
     margin: 0px;
     padding:0px;
-    background-color:white;
 }
+
 h1,p{
     padding:0px;
     margin:0px;
@@ -32,7 +34,7 @@ h1,p{
 }
 .instruction-text{
     background-color:rgba(252, 239, 239,0.5);
-    padding:1.5rem 0rem;
+    padding:1.5rem 1rem;
     text-align: center;
     font-size:15px;
     font-family:Arial, Helvetica, sans-serif;
@@ -41,11 +43,12 @@ h1,p{
 .input-block{
     width:max-content;
     max-width:90vw;
+    overflow-x: scroll;
     height:max-content;
     margin: auto;
     margin-top:0vh;
     display: grid;
-    grid-template-columns:1.5fr 4.5fr;
+    grid-template-columns:1.5fr;
     grid-column: auto;
     grid-row: auto;
     column-gap:1rem;
@@ -71,11 +74,12 @@ h1,p{
 .matrix-input-block{
     width:max-content;
     max-width:90vw;
+    overflow-x:scroll;
     height:max-content;
     margin: auto;
     margin-top:5vh;
     display: grid;
-    grid-template-columns:1fr 1fr;
+    grid-template-columns:1fr;
     grid-column: auto;
     grid-row: auto;
     column-gap:2rem;
@@ -112,13 +116,15 @@ h1,p{
     border-radius: 0px;
 }
 
+/* solution block */
 .solution-block{
-    width:80%;
+    width:95%;
     margin:auto;
     margin-top:3vh;
     margin-bottom:3vh;
-    padding:1rem;
     font-family: sans-serif;
+    padding: 0px;
+    margin:auto;
 }
 
 .solution-sub-block{
@@ -129,78 +135,86 @@ h1,p{
     box-shadow: 0px 0px 2px rgba(12, 5, 63,0.2);
     font-family:Arial, Helvetica, sans-serif;
 }
-
-.typewriter-text{
-    font-size:20px;
-}
-.result-number-block{
-    padding:0rem 1rem 1rem 1rem;
-}
 .solution-sub-block h1{
-    font-size:25px;
+    font-size:1rem;
     font-weight: 400;
     padding:1rem;
     background-color: aliceblue;
 }
 .solution-sub-block h2{
-    font-size:21px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:0.7rem;
     padding:1rem;
     font-weight: 400;
     background-color:rgb(243, 243, 244);
     color: gray;
 }
 
+.result-number-block{
+    padding:0.5rem;
+    margin:0px;
+}
+.bit-number-display{
+    display:flex;
+    flex-direction: column;
+    row-gap: .5rem;
+    font-size:0.5rem;
+}
 .solution-sub-block h3{
-    font-size:18px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:0.8rem;
     font-weight: 400;
-    margin-top:2rem;
+    padding: 0px;
+    margin: 0px;
 }
-
-.solution-sub-block h3 span{
-    font-size:20px;
-    font-weight: 400;
-    letter-spacing: 2px;
+.bit-block{
+    width:100%;
+    padding:1.2rem 0px;
+    margin:0px;
+    overflow-x: scroll;
 }
-
-.p10-key{
-    padding-right:20px;
+.bit-element{
+    padding:0.7rem 1rem;
+    font-size:1rem;
+    background-color:rgba(217, 217, 219, 0.1);
+    border:1px solid rgb(190, 188, 188);
 }
 .array-generation-block{
     padding-top:1rem;
     padding-bottom:0.5rem;
 }
 .generation-line{
-    font-size:17px;
+    font-size:1rem;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-bottom:15px;
     font-weight:400;
     color: rgb(73, 73, 73);
 }
-.bit-block{
+
+.solution-sub-block button{
+    font-size:0.5rem;
     margin-left:1rem;
-}
-.bit-element{
-    padding:0.5rem 1rem;
-    background-color:rgba(217, 217, 219, 0.1);
-    border:1px solid rgb(190, 188, 188);
+    padding:0.2rem 1rem 0.2rem 1rem;
+    cursor: pointer;
 }
 
-
-.bit-number-display{
-    display: grid;
-    grid-template-columns:1.2fr 4.8fr;
-    grid-column: auto; 
+.p10-key{
+    padding-right:20px;
 }
 
 
 .lsc1-main-block{
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-column: auto;
-    grid-row: auto;
+    margin-top:1rem;
 }
-
+.lsc1-sub-block{
+    padding-bottom:1rem;
+    margin-bottom:1rem;
+    border-bottom:1px solid rgb(229, 229, 229);
+}
 .lcs1-main-container{
     padding-top:1rem;
     padding-left:1rem;
@@ -230,16 +244,12 @@ h1,p{
 
 .combine-block{
     display:grid;
-    grid-template-columns:1fr 1fr;
+    grid-template-columns:1fr;
     grid-column: auto;
     grid-row: auto;
 }
 
-.solution-sub-block button{
-    margin-left:1rem;
-    padding:0.5rem 1rem 0.5rem 1rem;
-    cursor: pointer;
-}
+
 
 .plaintext-start-btn{
     background-color:aliceblue;
@@ -247,4 +257,4 @@ h1,p{
     border-radius:3px;
 }
 
-
+}
