--- a/src/css/simple-des-max.css
+++ b/src/css/simple-des-max.css
@@ -1,3 +1,4 @@
+/* body */
 body{
     margin: 0px;
     padding:0px;
@@ -7,7 +8,7 @@ h1,p{
     padding:0px;
     margin:0px;
 }
-
+/* header */
 .header{
     width:100%;
     height:10vh;
@@ -18,44 +19,44 @@ h1,p{
 }
 .header-text{
     margin-left:5%;
-    font-size:20px;
+    font-size:1.3rem;
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal;
     color: rgb(15, 100, 72);
 }
-
-
+/* main block */
 .main-block{
     width:100%;
     height:auto;
 }
+/* instruction alert */
 .instruction-text{
-    background-color:rgba(252, 239, 239,0.5);
-    padding:1.5rem 0rem;
-    text-align: center;
-    font-size:15px;
+    text-align:left;
+    font-size:1rem;
     font-family:Arial, Helvetica, sans-serif;
     color: rgb(250, 7, 7);
 }
-.input-block{
+/* inputs css */
+.input-container{
     width:max-content;
     max-width:90vw;
     height:max-content;
     margin: auto;
     margin-top:0vh;
-    display: grid;
-    grid-template-columns:1.5fr 4.5fr;
-    grid-column: auto;
-    grid-row: auto;
-    column-gap:1rem;
+}
+.input-block{
+    max-width:90vw;
 }
 .input-block h2{
     color: gray;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .input-span{
-    margin-right:1rem;
+    width: 1rem;
+}
+.input-sub-block{
+    width:100%;
 }
 .input-box{
     outline: none;
@@ -63,7 +64,7 @@ h1,p{
     border-radius:3px;
     border-bottom:1px solid rgb(21, 9, 65);
     padding:0.5rem;
-    font-size:18px;
+    font-size:1rem;
 }
 .inverse{
     font-size:14px;
@@ -87,6 +88,7 @@ h1,p{
     color:gray;
 }
 
+/* submit button block */
 .submit-btn-block{
     margin-top:5vh;
     display: flex;
@@ -97,21 +99,23 @@ h1,p{
     background-color: aliceblue;
 }
 .submit-btn{
-    font-size:23px;
+    font-size:1rem;
     letter-spacing: 2px;
     padding:0.5rem 2rem 0.5rem 2rem;
-    background-color: rgb(37,59,128);
+    background-color:darkslateblue;
     border-radius:5px;
     cursor: pointer;
     color: white;
     border:none;
-    font-family:sans-serif;
+    transition: transform 300ms ease-out;
+    border-radius:0.5rem;
 }
 
 .submit-btn:hover{
-    border-radius: 0px;
+    transform: scale(1.1);
 }
 
+/* solution block */
 .solution-block{
     width:80%;
     margin:auto;
@@ -130,12 +134,31 @@ h1,p{
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.typewriter-text{
-    font-size:20px;
-}
 .result-number-block{
-    padding:0rem 1rem 1rem 1rem;
+    padding:0.5rem;
 }
+.bit-number-display{
+    display: grid;
+    grid-template-columns:1.5fr 4.5fr;
+    grid-column: auto; 
+}
+.bit-number-display-lcs1{
+    display: grid;
+    grid-template-columns:2fr 4fr;
+    grid-column: auto; 
+}
+.cipher-text-block{
+    background-color: aliceblue;
+}
+.bit-block{
+    margin:auto auto auto 0px;
+}
+.bit-element{
+    padding:0.8rem 1.2rem;
+    background-color:rgba(217, 217, 219, 0.1);
+    border:1px solid rgb(190, 188, 188);
+}
+
 .solution-sub-block h1{
     font-size:25px;
     font-weight: 400;
@@ -148,20 +171,12 @@ h1,p{
     font-weight: 400;
     background-color:rgb(243, 243, 244);
     color: gray;
+    margin-top:0px;
 }
-
 .solution-sub-block h3{
     font-size:18px;
     font-weight: 400;
-    margin-top:2rem;
 }
-
-.solution-sub-block h3 span{
-    font-size:20px;
-    font-weight: 400;
-    letter-spacing: 2px;
-}
-
 .p10-key{
     padding-right:20px;
 }
@@ -176,29 +191,26 @@ h1,p{
     font-weight:400;
     color: rgb(73, 73, 73);
 }
-.bit-block{
+
+.solution-sub-block button{
     margin-left:1rem;
-}
-.bit-element{
-    padding:0.5rem 1rem;
-    background-color:rgba(217, 217, 219, 0.1);
-    border:1px solid rgb(190, 188, 188);
+    padding:0.5rem 1rem 0.5rem 1rem;
+    cursor: pointer;
 }
 
-
-.bit-number-display{
-    display: grid;
-    grid-template-columns:1.2fr 4.8fr;
-    grid-column: auto; 
+.plaintext-start-btn{
+    background-color:aliceblue;
+    border: 1px solid rgb(26, 39, 51);
+    border-radius:3px;
 }
-
-
+/* left shift block */
 .lsc1-main-block{
     display:grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     grid-column: auto;
     grid-row: auto;
+    margin:1rem 0px;
 }
 
 .lcs1-main-container{
@@ -218,7 +230,7 @@ h1,p{
     width:20px;
     text-align: center;
 }
-  
+/* sbox block */
 .sbox-main-block{
     padding: 1rem;
 }
@@ -228,6 +240,7 @@ h1,p{
     padding-bottom:1rem;
 }
 
+/* combine block */
 .combine-block{
     display:grid;
     grid-template-columns:1fr 1fr;
@@ -235,16 +248,56 @@ h1,p{
     grid-row: auto;
 }
 
-.solution-sub-block button{
-    margin-left:1rem;
-    padding:0.5rem 1rem 0.5rem 1rem;
+
+/* control btn block */
+.control-mode-block{
+    width:100%;
+    padding:1rem 0px;
+    margin: auto;
+    background-color: rgb(220, 237, 252);
+}
+.control-sub-block{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width:50%;
+    margin: auto;
+}
+.control-mode-btn{
+    background-color:darkslateblue;
+    color: aliceblue;
+    font-size:1rem;
+    font-weight:500;
+    padding:0.5rem;
+    box-shadow: 0px 0px 3px;
+    border-radius:5px;
     cursor: pointer;
+    border: none;
+    transition: transform 300ms ease-out;
 }
 
-.plaintext-start-btn{
-    background-color:aliceblue;
-    border: 1px solid rgb(26, 39, 51);
-    border-radius:3px;
+.control-mode-btn:hover{
+    transform:scale(1.1);
+}
+.refresh-btn{
+    position: absolute;
+    right:5vw;
 }
 
+/* sbox input */
+.matrix-container {
+    display: inline-block;
+    padding: 10px;
+}
 
+.matrix-row {
+display: flex;
+}
+
+.matrix-input {
+width: 40px;
+height: 40px;
+margin: 2px;
+text-align: center;
+}
+  
