--- a/src/css/simple-des-min.css
+++ b/src/css/simple-des-min.css
@@ -1,15 +1,14 @@
 @media screen  and (max-width: 750px) {
-  
+/* body */
 body{
     margin: 0px;
     padding:0px;
 }
-
 h1,p{
     padding:0px;
     margin:0px;
 }
-
+/* header */
 .header{
     width:100%;
     height:10vh;
@@ -20,45 +19,45 @@ h1,p{
 }
 .header-text{
     margin-left:5%;
-    font-size:20px;
+    font-size:1.2rem;
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal;
     color: rgb(15, 100, 72);
 }
-
-
+/* main block */
 .main-block{
     width:100%;
     height:auto;
 }
+/* instruction alert */
 .instruction-text{
-    background-color:rgba(252, 239, 239,0.5);
-    padding:1.5rem 1rem;
-    text-align: center;
-    font-size:15px;
+    text-align:left;
+    font-size:1rem;
     font-family:Arial, Helvetica, sans-serif;
     color: rgb(250, 7, 7);
 }
-.input-block{
+/* inputs block css */
+.input-container{
     width:max-content;
     max-width:90vw;
-    overflow-x: scroll;
     height:max-content;
     margin: auto;
     margin-top:0vh;
-    display: grid;
-    grid-template-columns:1.5fr;
-    grid-column: auto;
-    grid-row: auto;
-    column-gap:1rem;
+}
+.input-block{
+    max-width:90vw;
 }
 .input-block h2{
     color: gray;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .input-span{
-    margin-right:1rem;
+    width:1rem;
+}
+.input-sub-block{
+    overflow-x:scroll;
+    width:100%;
 }
 .input-box{
     outline: none;
@@ -66,7 +65,7 @@ h1,p{
     border-radius:3px;
     border-bottom:1px solid rgb(21, 9, 65);
     padding:0.5rem;
-    font-size:18px;
+    font-size:1rem;
 }
 .inverse{
     font-size:14px;
@@ -91,6 +90,7 @@ h1,p{
     color:gray;
 }
 
+/* submit btn block */
 .submit-btn-block{
     margin-top:5vh;
     display: flex;
@@ -111,7 +111,6 @@ h1,p{
     border:none;
     font-family:sans-serif;
 }
-
 .submit-btn:hover{
     border-radius: 0px;
 }
@@ -201,9 +200,15 @@ h1,p{
 .p10-key{
     padding-right:20px;
 }
-
-
+/* left shift block */
 .lsc1-main-block{
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-column: auto;
+    margin-top:1rem;
+}
+.bit-number-display-lcs1{
     display:grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
@@ -220,19 +225,20 @@ h1,p{
     padding-left:1rem;
 }
 
+/* two digit number block */
 .two-digit-inputs {
     display: flex;
     gap: 14px;
     padding:0px;
     height:40px;
     margin-top:1rem;
-}
-  
+}  
 .input-box-2digit{
     width:20px;
     text-align: center;
 }
-  
+
+/* sbox */
 .sbox-main-block{
     padding: 1rem;
 }
@@ -256,5 +262,57 @@ h1,p{
     border: 1px solid rgb(26, 39, 51);
     border-radius:3px;
 }
+
+.control-mode-block{
+    width:100%;
+    padding:1rem 0px;
+    margin: auto;
+    background-color: rgb(220, 237, 252);
+}
+.control-sub-block{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width:100%;
+    margin: auto;
+}
+.control-mode-btn{
+    background-color:darkslateblue;
+    color: aliceblue;
+    font-size:0.7rem;
+    font-weight:500;
+    padding:0.5rem;
+    box-shadow: 0px 0px 3px;
+    border-radius:5px;
+    cursor: pointer;
+    border: none;
+    transition: transform 300ms ease-out;
+}
+
+.control-mode-btn:hover{
+    transform:scale(1.1);
+}
+.refresh-btn{
+    font-size:0.6rem;
+    position: absolute;
+    right:5vw;
+}
+
+.matrix-container {
+    display: inline-block;
+    padding: 10px;
+  }
+  
+  .matrix-row {
+    display: flex;
+  }
+  
+  .matrix-input {
+    width: 40px;
+    height: 40px;
+    margin: 2px;
+    text-align: center;
+  }
+  
 
 }
