--- a/src/css/simple-des-min.css
+++ b/src/css/simple-des-min.css
@@ -53,7 +53,7 @@ h1,p{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .input-span{
-    width:1rem;
+    margin-left:1rem;
 }
 .input-sub-block{
     overflow-x:scroll;
@@ -65,7 +65,8 @@ h1,p{
     border-radius:3px;
     border-bottom:1px solid rgb(21, 9, 65);
     padding:0.5rem;
-    font-size:1rem;
+    font-size:1.2rem;
+
 }
 .inverse{
     font-size:14px;
