--- a/src/css/simple-des-max.css
+++ b/src/css/simple-des-max.css
@@ -161,9 +161,10 @@ h1,p{
 
 .solution-sub-block h1{
     font-size:25px;
-    font-weight: 400;
+    font-weight: 500;
     padding:1rem;
     background-color: aliceblue;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .solution-sub-block h2{
     font-size:21px;
@@ -172,6 +173,7 @@ h1,p{
     background-color:rgb(243, 243, 244);
     color: gray;
     margin-top:0px;
+    margin-bottom:0px;
 }
 .solution-sub-block h3{
     font-size:18px;
@@ -301,3 +303,10 @@ margin: 2px;
 text-align: center;
 }
   
+.line-separation{
+    width:100%;
+    height:0px;
+    border-bottom:1px solid gray;
+    padding:0px;
+    margin:0px;
+}
