--- a/src/css/simple-des-max.css
+++ b/src/css/simple-des-max.css
@@ -310,3 +310,11 @@ text-align: center;
     padding:0px;
     margin:0px;
 }
+.input-line-separation{
+    width:100%;
+    height:0px;
+    margin-top:1rem;
+    border:none;
+    outline: none;
+    border-bottom:1px solid rgba(232, 230, 230,0.6);
+}
